shorten-service: gen qr code,... account-service: fix observer, change entity account
