# backend/account-service/src/main/java/online/gonlink/accountservice/entity/ShortUrl.java
@@ -1,0 +1,13 @@
+package online.gonlink.accountservice.entity;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class ShortUrl {
+    private String shortCode;
+    private String originalUrl;
+}
