# backend/grpc-gateway/api/generated/account-service.pb.go
@@ -60,23 +60,78 @@ func (*GetInfoAccountRequest) Descriptor() ([]byte, []int) {
 	return file_account_service_proto_rawDescGZIP(), []int{0}
 }
 
+type ShortUrl struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	ShortCode   string `protobuf:"bytes,1,opt,name=shortCode,proto3" json:"shortCode,omitempty"`
+	OriginalUrl string `protobuf:"bytes,2,opt,name=originalUrl,proto3" json:"originalUrl,omitempty"`
+}
+
+func (x *ShortUrl) Reset() {
+	*x = ShortUrl{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_account_service_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *ShortUrl) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*ShortUrl) ProtoMessage() {}
+
+func (x *ShortUrl) ProtoReflect() protoreflect.Message {
+	mi := &file_account_service_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use ShortUrl.ProtoReflect.Descriptor instead.
+func (*ShortUrl) Descriptor() ([]byte, []int) {
+	return file_account_service_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *ShortUrl) GetShortCode() string {
+	if x != nil {
+		return x.ShortCode
+	}
+	return ""
+}
+
+func (x *ShortUrl) GetOriginalUrl() string {
+	if x != nil {
+		return x.OriginalUrl
+	}
+	return ""
+}
+
 type GetInfoAccountResponse struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Email  string   `protobuf:"bytes,1,opt,name=email,proto3" json:"email,omitempty"`
-	Name   string   `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty"`
-	Avatar string   `protobuf:"bytes,3,opt,name=avatar,proto3" json:"avatar,omitempty"`
-	Role   string   `protobuf:"bytes,4,opt,name=role,proto3" json:"role,omitempty"`
-	Create string   `protobuf:"bytes,5,opt,name=create,proto3" json:"create,omitempty"`
-	Urls   []string `protobuf:"bytes,6,rep,name=urls,proto3" json:"urls,omitempty"`
+	Email  string      `protobuf:"bytes,1,opt,name=email,proto3" json:"email,omitempty"`
+	Name   string      `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty"`
+	Avatar string      `protobuf:"bytes,3,opt,name=avatar,proto3" json:"avatar,omitempty"`
+	Role   string      `protobuf:"bytes,4,opt,name=role,proto3" json:"role,omitempty"`
+	Create string      `protobuf:"bytes,5,opt,name=create,proto3" json:"create,omitempty"`
+	Urls   []*ShortUrl `protobuf:"bytes,6,rep,name=urls,proto3" json:"urls,omitempty"`
 }
 
 func (x *GetInfoAccountResponse) Reset() {
 	*x = GetInfoAccountResponse{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_account_service_proto_msgTypes[1]
+		mi := &file_account_service_proto_msgTypes[2]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -89,7 +144,7 @@ func (x *GetInfoAccountResponse) String() string {
 func (*GetInfoAccountResponse) ProtoMessage() {}
 
 func (x *GetInfoAccountResponse) ProtoReflect() protoreflect.Message {
-	mi := &file_account_service_proto_msgTypes[1]
+	mi := &file_account_service_proto_msgTypes[2]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -102,7 +157,7 @@ func (x *GetInfoAccountResponse) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use GetInfoAccountResponse.ProtoReflect.Descriptor instead.
 func (*GetInfoAccountResponse) Descriptor() ([]byte, []int) {
-	return file_account_service_proto_rawDescGZIP(), []int{1}
+	return file_account_service_proto_rawDescGZIP(), []int{2}
 }
 
 func (x *GetInfoAccountResponse) GetEmail() string {
@@ -140,7 +195,7 @@ func (x *GetInfoAccountResponse) GetCreate() string {
 	return ""
 }
 
-func (x *GetInfoAccountResponse) GetUrls() []string {
+func (x *GetInfoAccountResponse) GetUrls() []*ShortUrl {
 	if x != nil {
 		return x.Urls
 	}
@@ -155,30 +210,36 @@ var file_account_service_proto_rawDesc = []byte{
 	0x67, 0x6f, 0x6e, 0x6c, 0x69, 0x6e, 0x6b, 0x1a, 0x1c, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f,
 	0x61, 0x70, 0x69, 0x2f, 0x61, 0x6e, 0x6e, 0x6f, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2e,
 	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x17, 0x0a, 0x15, 0x47, 0x65, 0x74, 0x49, 0x6e, 0x66, 0x6f,
-	0x41, 0x63, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x22, 0x9a,
-	0x01, 0x0a, 0x16, 0x47, 0x65, 0x74, 0x49, 0x6e, 0x66, 0x6f, 0x41, 0x63, 0x63, 0x6f, 0x75, 0x6e,
-	0x74, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x14, 0x0a, 0x05, 0x65, 0x6d, 0x61,
-	0x69, 0x6c, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x65, 0x6d, 0x61, 0x69, 0x6c, 0x12,
-	0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e,
-	0x61, 0x6d, 0x65, 0x12, 0x16, 0x0a, 0x06, 0x61, 0x76, 0x61, 0x74, 0x61, 0x72, 0x18, 0x03, 0x20,
-	0x01, 0x28, 0x09, 0x52, 0x06, 0x61, 0x76, 0x61, 0x74, 0x61, 0x72, 0x12, 0x12, 0x0a, 0x04, 0x72,
-	0x6f, 0x6c, 0x65, 0x18, 0x04, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x72, 0x6f, 0x6c, 0x65, 0x12,
-	0x16, 0x0a, 0x06, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x18, 0x05, 0x20, 0x01, 0x28, 0x09, 0x52,
-	0x06, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x12, 0x12, 0x0a, 0x04, 0x75, 0x72, 0x6c, 0x73, 0x18,
-	0x06, 0x20, 0x03, 0x28, 0x09, 0x52, 0x04, 0x75, 0x72, 0x6c, 0x73, 0x32, 0xa7, 0x01, 0x0a, 0x0e,
-	0x41, 0x63, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x94,
-	0x01, 0x0a, 0x0e, 0x67, 0x65, 0x74, 0x49, 0x6e, 0x66, 0x6f, 0x41, 0x63, 0x63, 0x6f, 0x75, 0x6e,
-	0x74, 0x12, 0x25, 0x2e, 0x6f, 0x6e, 0x6c, 0x69, 0x6e, 0x65, 0x2e, 0x67, 0x6f, 0x6e, 0x6c, 0x69,
-	0x6e, 0x6b, 0x2e, 0x47, 0x65, 0x74, 0x49, 0x6e, 0x66, 0x6f, 0x41, 0x63, 0x63, 0x6f, 0x75, 0x6e,
-	0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x26, 0x2e, 0x6f, 0x6e, 0x6c, 0x69, 0x6e,
-	0x65, 0x2e, 0x67, 0x6f, 0x6e, 0x6c, 0x69, 0x6e, 0x6b, 0x2e, 0x47, 0x65, 0x74, 0x49, 0x6e, 0x66,
-	0x6f, 0x41, 0x63, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65,
-	0x22, 0x33, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x2d, 0x3a, 0x01, 0x2a, 0x22, 0x28, 0x2f, 0x61, 0x63,
-	0x63, 0x6f, 0x75, 0x6e, 0x74, 0x2d, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2f, 0x61, 0x70,
-	0x69, 0x2f, 0x76, 0x31, 0x2f, 0x67, 0x65, 0x74, 0x2d, 0x69, 0x6e, 0x66, 0x6f, 0x2d, 0x61, 0x63,
-	0x63, 0x6f, 0x75, 0x6e, 0x74, 0x42, 0x18, 0x5a, 0x16, 0x67, 0x72, 0x70, 0x63, 0x2d, 0x67, 0x61,
-	0x74, 0x65, 0x77, 0x61, 0x79, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62,
-	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x41, 0x63, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x22, 0x4a,
+	0x0a, 0x08, 0x53, 0x68, 0x6f, 0x72, 0x74, 0x55, 0x72, 0x6c, 0x12, 0x1c, 0x0a, 0x09, 0x73, 0x68,
+	0x6f, 0x72, 0x74, 0x43, 0x6f, 0x64, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x09, 0x73,
+	0x68, 0x6f, 0x72, 0x74, 0x43, 0x6f, 0x64, 0x65, 0x12, 0x20, 0x0a, 0x0b, 0x6f, 0x72, 0x69, 0x67,
+	0x69, 0x6e, 0x61, 0x6c, 0x55, 0x72, 0x6c, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0b, 0x6f,
+	0x72, 0x69, 0x67, 0x69, 0x6e, 0x61, 0x6c, 0x55, 0x72, 0x6c, 0x22, 0xb4, 0x01, 0x0a, 0x16, 0x47,
+	0x65, 0x74, 0x49, 0x6e, 0x66, 0x6f, 0x41, 0x63, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x52, 0x65, 0x73,
+	0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x14, 0x0a, 0x05, 0x65, 0x6d, 0x61, 0x69, 0x6c, 0x18, 0x01,
+	0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x65, 0x6d, 0x61, 0x69, 0x6c, 0x12, 0x12, 0x0a, 0x04, 0x6e,
+	0x61, 0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12,
+	0x16, 0x0a, 0x06, 0x61, 0x76, 0x61, 0x74, 0x61, 0x72, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52,
+	0x06, 0x61, 0x76, 0x61, 0x74, 0x61, 0x72, 0x12, 0x12, 0x0a, 0x04, 0x72, 0x6f, 0x6c, 0x65, 0x18,
+	0x04, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x72, 0x6f, 0x6c, 0x65, 0x12, 0x16, 0x0a, 0x06, 0x63,
+	0x72, 0x65, 0x61, 0x74, 0x65, 0x18, 0x05, 0x20, 0x01, 0x28, 0x09, 0x52, 0x06, 0x63, 0x72, 0x65,
+	0x61, 0x74, 0x65, 0x12, 0x2c, 0x0a, 0x04, 0x75, 0x72, 0x6c, 0x73, 0x18, 0x06, 0x20, 0x03, 0x28,
+	0x0b, 0x32, 0x18, 0x2e, 0x6f, 0x6e, 0x6c, 0x69, 0x6e, 0x65, 0x2e, 0x67, 0x6f, 0x6e, 0x6c, 0x69,
+	0x6e, 0x6b, 0x2e, 0x53, 0x68, 0x6f, 0x72, 0x74, 0x55, 0x72, 0x6c, 0x52, 0x04, 0x75, 0x72, 0x6c,
+	0x73, 0x32, 0xa7, 0x01, 0x0a, 0x0e, 0x41, 0x63, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x53, 0x65, 0x72,
+	0x76, 0x69, 0x63, 0x65, 0x12, 0x94, 0x01, 0x0a, 0x0e, 0x67, 0x65, 0x74, 0x49, 0x6e, 0x66, 0x6f,
+	0x41, 0x63, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x12, 0x25, 0x2e, 0x6f, 0x6e, 0x6c, 0x69, 0x6e, 0x65,
+	0x2e, 0x67, 0x6f, 0x6e, 0x6c, 0x69, 0x6e, 0x6b, 0x2e, 0x47, 0x65, 0x74, 0x49, 0x6e, 0x66, 0x6f,
+	0x41, 0x63, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x26,
+	0x2e, 0x6f, 0x6e, 0x6c, 0x69, 0x6e, 0x65, 0x2e, 0x67, 0x6f, 0x6e, 0x6c, 0x69, 0x6e, 0x6b, 0x2e,
+	0x47, 0x65, 0x74, 0x49, 0x6e, 0x66, 0x6f, 0x41, 0x63, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x52, 0x65,
+	0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x33, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x2d, 0x3a, 0x01,
+	0x2a, 0x22, 0x28, 0x2f, 0x61, 0x63, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x2d, 0x73, 0x65, 0x72, 0x76,
+	0x69, 0x63, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x2f, 0x67, 0x65, 0x74, 0x2d, 0x69,
+	0x6e, 0x66, 0x6f, 0x2d, 0x61, 0x63, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x42, 0x18, 0x5a, 0x16, 0x67,
+	0x72, 0x70, 0x63, 0x2d, 0x67, 0x61, 0x74, 0x65, 0x77, 0x61, 0x79, 0x2f, 0x61, 0x70, 0x69, 0x2f,
+	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -193,19 +254,21 @@ func file_account_service_proto_rawDescGZIP() []byte {
 	return file_account_service_proto_rawDescData
 }
 
-var file_account_service_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_account_service_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
 var file_account_service_proto_goTypes = []any{
 	(*GetInfoAccountRequest)(nil),  // 0: online.gonlink.GetInfoAccountRequest
-	(*GetInfoAccountResponse)(nil), // 1: online.gonlink.GetInfoAccountResponse
+	(*ShortUrl)(nil),               // 1: online.gonlink.ShortUrl
+	(*GetInfoAccountResponse)(nil), // 2: online.gonlink.GetInfoAccountResponse
 }
 var file_account_service_proto_depIdxs = []int32{
-	0, // 0: online.gonlink.AccountService.getInfoAccount:input_type -> online.gonlink.GetInfoAccountRequest
-	1, // 1: online.gonlink.AccountService.getInfoAccount:output_type -> online.gonlink.GetInfoAccountResponse
-	1, // [1:2] is the sub-list for method output_type
-	0, // [0:1] is the sub-list for method input_type
-	0, // [0:0] is the sub-list for extension type_name
-	0, // [0:0] is the sub-list for extension extendee
-	0, // [0:0] is the sub-list for field type_name
+	1, // 0: online.gonlink.GetInfoAccountResponse.urls:type_name -> online.gonlink.ShortUrl
+	0, // 1: online.gonlink.AccountService.getInfoAccount:input_type -> online.gonlink.GetInfoAccountRequest
+	2, // 2: online.gonlink.AccountService.getInfoAccount:output_type -> online.gonlink.GetInfoAccountResponse
+	2, // [2:3] is the sub-list for method output_type
+	1, // [1:2] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
 }
 
 func init() { file_account_service_proto_init() }
@@ -227,6 +290,18 @@ func file_account_service_proto_init() {
 			}
 		}
 		file_account_service_proto_msgTypes[1].Exporter = func(v any, i int) any {
+			switch v := v.(*ShortUrl); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_account_service_proto_msgTypes[2].Exporter = func(v any, i int) any {
 			switch v := v.(*GetInfoAccountResponse); i {
 			case 0:
 				return &v.state
@@ -245,7 +320,7 @@ func file_account_service_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_account_service_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   2,
+			NumMessages:   3,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
